Closed Bug 384637 Opened 17 years ago Closed 17 years ago

Self-referencing <svg:mask> causes stack overflow crash

Categories

(Core :: SVG, defect)

defect
Not set
critical

Tracking

()

RESOLVED FIXED

People

(Reporter: jruderman, Assigned: longsonr)

References

Details

(Keywords: crash, hang, testcase)

Attachments

(2 files)

After about a minute of hanging and runaway memory allocation, Firefox crashes with a stack overflow (mutual recursion between nsSVGUtils::PaintChildWithEffects and nsSVGMaskFrame::ComputeMaskAlpha).
OS: Mac OS X → All
Hardware: PC → All
Attached patch patchSplinter Review
Same as clip path and marker
Assignee: nobody → longsonr
Status: NEW → ASSIGNED
Attachment #268606 - Flags: superreview?(tor)
Attachment #268606 - Flags: review?(tor)
Attachment #268606 - Flags: superreview?(tor)
Attachment #268606 - Flags: superreview+
Attachment #268606 - Flags: review?(tor)
Attachment #268606 - Flags: review+
checked in.
Status: ASSIGNED → RESOLVED
Closed: 17 years ago
Resolution: --- → FIXED
Flags: in-testsuite?
Crashtest checked in, but skipped on Mac due to <svg:mask> crashing (bug 407099).
Flags: in-testsuite? → in-testsuite+
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Creator:
Created:
Updated:
Size: