Bug 384637 - Self-referencing svg:mask causes stack overflow crash. r+sr=tor